--- a/Requirements.txt
+++ b/Requirements.txt
@@ -4,8 +4,7 @@ Your website must have at least one stylesheet file.
 You must use Bootstrap 4 on your website, taking advantage of at least one Bootstrap component, and using at least two Bootstrap columns for layout purposes using Bootstrap’s grid model.
 Your stylesheet(s) must include at least one mobile-responsive @media query, such that something about the styling changes for smaller screens.
 Your stylesheet(s) must use at least five different CSS properties, and at least five different types of CSS selectors. You must use the #id selector at least once, and the .class selector at least once.
+Your stylesheets must use at least one SCSS variable, at least one example of SCSS nesting
 ----
-
-
-Your stylesheets must use at least one SCSS variable, at least one example of SCSS nesting, and at least one use of SCSS inheritance.
+ , and at least one use of SCSS inheritance.
 In README.md, include a short writeup describing your project, what’s contained in each file, and (optionally) any other additional information the staff should know about your project.
